@@ -1,5 +1,5 @@
 name    = Config-Model-Itself
-version = 1.216
+version = 1.217
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
