@@ -1,7 +1,7 @@
 # -*- cperl -*-
 
 use ExtUtils::testlib;
-use Test::More tests => 4 ;
+use Test::More tests => 6 ;
 use Config::Model;
 use Log::Log4perl qw(:easy) ;
 use Data::Dumper ;
@@ -51,11 +51,16 @@ my $backend = $root->fetch_element('backend') ;
 my @choices = $backend->get_choice ;
 
 ok( (scalar grep { $_ eq 'Yaml'} @choices), "Yaml plugin backend was found") ;
+ok( (scalar grep { $_ eq 'Debian::Dep5'} @choices), "Debian::Dep5 plugin backend was found") ;
 
 
 my $help = $backend->get_help('Yaml') ;
 like($help,qr/provided by Config::Model::Backend::Yaml/,
    "Found Yaml NAME section from pod") ;
+
+$help = $backend->get_help('Debian::Dep5') ;
+like($help,qr/provided by Config::Model::Backend::Debian::Dep5/,
+   "Found Debian::Dep5 NAME section from pod") ;
 
 $help = $backend->get_help('cds_file') ;
 is($help,"file ...", "cds_file help was kept") ;
